--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Lurppis/WeatherApp#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "request": "^2.83.0",
     "yargs": "^11.0.0"
   }
